--- a/public/styles/staticstyle.css
+++ b/public/styles/staticstyle.css
@@ -1307,20 +1307,7 @@ h2.designCommonHead {
     max-width: 60%;
 }
 
-.aboutUsUniqueWrap {
-    height: 95vh;
-    background: linear-gradient(rgba(0, 0, 0, 0.5)), url("/images/static/aboutus_unique-bg.png") no-repeat center center;
-    background-size: cover;
-    color: #fff;
-    position: sticky;
-    top: 120px;
-    border-radius: var(--border-home);
-    z-index: 0;
-}
 
-.aboutUsUniqueWrap>.container {
-    height: 100%;
-}
 
 .aboutUsUniqueContent {
     color: #fff;
@@ -1503,12 +1490,12 @@ h2.designCommonHead {
 }
 
 .aboutUsUniqueWrap {
-    height: 95vh;
+    height: 100vh;
     background: linear-gradient(rgba(0, 0, 0, 0.5)), url("/images/static/aboutus_unique-bg.png") no-repeat center center;
     background-size: cover;
     color: #fff;
     position: sticky;
-    top: 120px;
+    top: 100px;
     border-radius: var(--border-home);
     z-index: 10px;
 }
@@ -1568,9 +1555,9 @@ h2.designCommonHead {
     padding: 100px 0 200px;
     background: #FFFFFF;
     position: sticky;
-    top: 120px;
+    top: 100px;
     border-radius: var(--border-home);
-    margin-top: -100px;
+    /* margin-top: -100px; */
     z-index: 2;
 }
 
@@ -1619,10 +1606,11 @@ h2.designCommonHead {
     padding: 100px 0 200px;
     background: #E2E2E2;
     position: sticky;
-    top: 120px;
+    top: 100px;
     border-radius: var(--border-home);
-    margin-top: -100px;
+    /* margin-top: -100px; */
     z-index: 3;
+    height: 100vh;
 }
 
 .aboutUsMilestonesHead>h2 {
@@ -1739,11 +1727,12 @@ h2.designCommonHead {
     padding: 100px 0 200px;
     background: #333333;
     position: sticky;
-    top: 120px;
+    top: 100px;
     border-radius: var(--border-home);
-    margin-top: -100px;
+    /* margin-top: -100px; */
     z-index: 4;
     color: #ffff;
+    height: 100vh;
 }
 
 .aboutUsMissionHead>h2 {
@@ -1798,16 +1787,17 @@ h2.designCommonHead {
     padding: 100px 0 200px;
     background: #ECECEC;
     position: sticky;
-    top: 120px;
+    top: -300px;
     border-radius: var(--border-home);
-    margin-top: -100px;
+    /* margin-top: -100px; */
     z-index: 5;
+    /* height: 100vh; */
 }
 
 .aboutUsInfraStructureTopCont {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
     gap: 80px;
 }
 
@@ -1827,6 +1817,13 @@ h2.designCommonHead {
     line-height: 1.5em;
     margin-bottom: 30px;
     color: #111111;
+}
+
+.aboutUsInfraStructureTopContRght{display: flex;justify-content: center;}
+
+.aboutUsInfraStructureTopContRght > em{
+    max-width: 80%;
+    display:block;    
 }
 
 .aboutUsInfraStructureBtmCont {
@@ -1858,10 +1855,11 @@ h2.designCommonHead {
     padding: 100px 0 200px;
     background: #333333;
     position: sticky;
-    top: 120px;
+    top: 100px;
     border-radius: var(--border-home);
-    margin-top: -100px;
+    /* margin-top: -100px; */
     z-index: 6;
+    height: 100vh;
 }
 
 .aboutUsCeoContent {
@@ -1912,9 +1910,9 @@ h2.designCommonHead {
     padding: 100px 0 150px;
     background: #ECECEC;
     position: sticky;
-    top: 0;
+    top: 100px;
     border-radius: var(--border-home);
-    margin-top: -100px;
+    margin-bottom: 0px;
     z-index: 7;
 }
 
