--- a/app/globals.css
+++ b/app/globals.css
@@ -423,6 +423,11 @@ select:focus-visible {
   background: #000;
 }
 
+.footerParentWrap.certifications-and-quality-assurance .footerBgWrap {
+  background: #8a8a8a;
+}
+.footerParentWrap.category .footerBgWrap{background:#f6f6f6;}
+
 
 .footerLogoSec {
   display: flex;
