--- a/public/styles/staticstyle.css
+++ b/public/styles/staticstyle.css
@@ -211,6 +211,10 @@
     gap: 15px;
 }
 
+.prdtBox{cursor: pointer;transition: all 0.5s ease;transform: scale(0.99)}
+.prdtBox:hover{transform: scale(1);}
+.prdtBox:hover .prdtDesc>a{ border-bottom: 1px solid var(--sred);}
+
 .prdtImg {
     width: 100%;
 }
@@ -244,7 +248,8 @@
     font-size: 14px;
     line-height: 25px;
     color: var(--blue);
-    border-bottom: 1px solid var(--sred);
+    border-bottom: 1px solid transparent;
+    transition: all 0.5s ease;
 }
 
 .prdctMobMenu>span {
