--- a/public/styles/staticstyle.css
+++ b/public/styles/staticstyle.css
@@ -59,6 +59,8 @@
     width: 100%;
     display: flex;
     flex-direction: column;
+    position: sticky;
+    top: 100px;
 }
 
 .productsMainItemBg {
@@ -211,9 +213,19 @@
     gap: 15px;
 }
 
-.prdtBox{cursor: pointer;transition: all 0.5s ease;transform: scale(0.99)}
-.prdtBox:hover{transform: scale(1);}
-.prdtBox:hover .prdtDesc>a{ border-bottom: 1px solid var(--sred);}
+.prdtBox {
+    cursor: pointer;
+    transition: all 0.5s ease;
+    transform: scale(0.99)
+}
+
+.prdtBox:hover {
+    transform: scale(1);
+}
+
+.prdtBox:hover .prdtDesc>a {
+    border-bottom: 1px solid var(--sred);
+}
 
 .prdtImg {
     width: 100%;
