--- a/public/styles/test.css
+++ b/public/styles/test.css
@@ -156,7 +156,8 @@
 
 
 .productInfoContainer {}
-.SpecTabs {display: flex;gap:15px}
+.specMobTab>span{display: none;}
+.SpecTabs {display: flex;gap:15px;}
 .SpecTabs >li{display: inline-block;padding: 10px 20px;background-color: #a9a9a9;color: #333;border-radius: 4px;font-family: var(--medium);font-size: 15px;line-height: 18px;position: relative;cursor: pointer;transition: all 0.3s ease;}
 .SpecTabs >li:hover{background-color:#444 ;color:#fff;}
 .SpecTabs >li.active{background-color:#444 ;color:#fff;}
@@ -209,7 +210,7 @@
 .relatedProductsWrap>h3{font-family: var(--medium);font-size: 25px;line-height: 32px;}
 .relatedProductsSlider{padding-top:30px ;position: relative;}
 .testdesc{padding: 20px 0;min-height: 90px;}
-.customClck{position: absolute;top:-41px;right:0;display: flex;gap:20px;z-index: 9999;}
+.customClck{position: absolute;top:-41px;right:0;display: flex;gap:20px;z-index: 1;}
 .customClck>div{display: inline-block;width: 40px;height: 40px;position: relative;cursor: pointer;}
 .customClck>div:after{content:'';display: inline-block;width: 100%;height: 100%;position: absolute;top:0;left:0;background-image: url(../images/home/right-arrow.svg);background-repeat: no-repeat;background-size: cover;}
 .swiper-button-prev-custom:after{transform: rotate(180deg);}
