--- a/public/styles/testbreaks.css
+++ b/public/styles/testbreaks.css
@@ -103,7 +103,7 @@
 .qualityRoundWrap{padding: 50px 0 150px;}
 
 /*product details*/
-.productDetailsMainWrap{flex-direction: column;padding: 50px 0;}
+.productDetailsMainWrap{flex-direction: column;padding: 50px 0 0;}
 .productGallery{padding-right: 0;}
 .productDetails{padding: 30px 0;}
 
@@ -183,11 +183,23 @@
 .qualityGallry{grid-template-columns: 1fr;}
 .cardContent > p{margin-bottom: 15px;}
 
+/*mobile scroll menu*/
+.specMobTab{position: relative;}
+.specMobTab>span{display: block;padding: 10px 20px;color: #fff;background-color: #444;font-size: 16px;line-height: 24px;border-radius: 4px 4px 0 0;margin-bottom: 0;position: relative;cursor: pointer;}
+.specMobTab>span:after{content:'';background-image: url('../images/icons/arrow-down.svg');background-repeat: no-repeat;background-size: contain;position: absolute;top:12px;right: 14px;display: inline-block;width: 15px;height: 15px;transition: all 0.5s ease;}
+.specMobTab.active>span:after{transform: rotate(180deg);}
+.specMobTab.active .SpecTabs{display: block;}
+.SpecTabs{display: none;gap:0;position: absolute;top:44px;left:0;right:0;background-color:#a9a9a9 ;z-index: 2;}
+.SpecTabs >li{border-radius: 0;display: block;}
+.SpecTabs > li.active:before{display: none;}
+/**/
+
 .productDetailsMainWrap{padding: 30px 0 0;}
-.prdtRoundWrap{padding: 30px 0 150px;}
-.prdtRoundWrap.gray{margin-bottom:-250px ;}
+.prdtRoundWrap{padding: 30px 0 130px;}
+.prdtRoundWrap.gray{margin-bottom:-125px ;}
 .customClck{gap:10px;top:-26px;}
 .customClck > div{width: 30px;height: 30px;}
+.productDetails{padding: 20px 0;}
 }
 
 
