--- a/app/globals.css
+++ b/app/globals.css
@@ -155,6 +155,10 @@ select:focus-visible {
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
 }
 
+.headerLogoSec>a {
+  cursor: default;
+}
+
 .headerLogoSec img {
   transition: all 0.6s cubic-bezier(0.25, 0.8, 0.25, 1);
   will-change: width, height;
