--- a/public/styles/mainstyle.css
+++ b/public/styles/mainstyle.css
@@ -925,6 +925,14 @@
     position: relative;
 }
 
+.specialityOverlay {
+    position: absolute;
+    inset: 0;
+    background: rgba(0, 0, 0, 0.6);
+    z-index: 1;
+    border-radius: 20px;
+}
+
 .specialitySlideTitle {
     font-size: 35px;
     font-family: var(--medium);
@@ -936,6 +944,8 @@
     display: flex;
     flex-direction: column;
     gap: 20px;
+    position: relative;
+    z-index: 2;
 }
 
 .specialityCard {
