--- a/public/styles/mainstyle.css
+++ b/public/styles/mainstyle.css
@@ -190,8 +190,22 @@
     gap: 30px;
 }
 
+.areaOfApplicationsSlider .slideImg {
+    border-radius: 20px;
+    overflow: hidden;
+    /* transition: transform .5s; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .areaOfApplicationsSlider .slideImg>img {
     border-radius: 20px;
+    transition: transform .5s !important;
+}
+
+.areaOfApplicationsSlider .slideSec:hover .slideImg>img {
+    transform: scale(1.03);
 }
 
 .areaOfApplicationsSlider .slideTitle {
@@ -1147,6 +1161,396 @@
 }
 
 .atGlanceGridItem>.horizontalLIne {
+    transition: background 0.3s ease;
+    position: relative;
+}
+
+.specialityCard:hover {
+    background: rgba(0, 0, 0, 0.75);
+}
+
+.specialityImageWrap {
+    flex: 0 0 150px;
+    border-radius: 10px;
+    overflow: hidden;
+}
+
+.specialityImage {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+    border-radius: 10px;
+}
+
+.specialityContent {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    padding: 30px 60px 30px 0;
+    justify-content: center;
+}
+
+.specialityContent h4 {
+    font-size: 26px;
+    color: #fff;
+    margin: 0;
+}
+
+.specialityContent p {
+    font-size: 18px;
+    line-height: 1.5em;
+    color: #fff;
+    margin: 8px 30px 0 0;
+    opacity: 0;
+    transform: translateY(10px);
+    pointer-events: none;
+    transition: opacity 0.4s ease, transform 0.4s ease;
+    position: absolute;
+    top: 35%;
+}
+
+.specialityCard:hover .specialityContent p {
+    opacity: 1;
+    transform: translateY(0);
+    pointer-events: auto;
+}
+
+.ourSpecialitiesBody {
+    position: relative;
+}
+
+.ourSpecialitiesSliderNav {
+    z-index: 10;
+    gap: 15px;
+    display: flex;
+    position: absolute;
+    top: -100px;
+    right: 0;
+}
+
+.ourSpecialitiesSliderBtn {
+    width: 45px;
+    height: 45px;
+    background-image: url("/images/home/left-arrow.svg");
+    background-size: contain;
+    background-repeat: no-repeat;
+    cursor: pointer;
+}
+
+.ourSpecialitiesSliderBtn.ourSpecialitiesNextBtn {
+    rotate: 180deg;
+}
+
+.ourSpecialitiesMarquee {
+    padding: 60px 30px 0;
+    overflow: hidden;
+}
+
+.ourSpecialitiesMarquee .marqueeText {
+    font-family: var(--marquee-black);
+    font-size: 80px;
+    color: #a8a8a8;
+    text-transform: uppercase;
+}
+
+
+/*at glance*/
+.atGlanceWrap {
+    padding: 100px 0 180px;
+    background: #ececec;
+    position: relative;
+    border-radius: var(--border-home);
+    margin-top: -100px;
+    z-index: 1;
+}
+
+.atGlanceTopCont {
+    display: flex;
+    gap: 100px;
+}
+
+.atGlanceTopContLft>p {
+    font-size: 30px;
+    line-height: 1.5em;
+    margin-top: 50px;
+    color: #111111;
+    max-width: 820px;
+}
+
+.atGlanceTopContLft a {
+    color: var(--blue);
+    margin-top: 40px;
+    font-size: 18px;
+    line-height: 1em;
+    display: inline-block;
+    position: relative;
+    padding-right: 30px;
+    transition: color 0.3s ease;
+}
+
+.atGlanceTopContLft a:after {
+    content: "";
+    position: absolute;
+    right: 0;
+    top: 5px;
+    width: 20px;
+    height: 20px;
+    background-image: url("/images/icons/right-arrow-red.svg");
+    background-size: contain;
+    background-repeat: no-repeat;
+    cursor: pointer;
+    transition: transform 0.3s ease;
+}
+
+.atGlanceTopContLft a:hover:after {
+    transform: translateX(3px);
+}
+
+.atGlanceTopContRght {
+    position: relative;
+    flex: 1;
+}
+
+.atGlanceTopContRght>span {
+    font-size: 380px;
+    line-height: 1em;
+    font-family: var(--medium);
+    color: #e5e5e5;
+}
+
+.atGlanceTopContRght>em {
+    position: absolute;
+    bottom: 120px;
+    right: 0;
+    max-width: 60%;
+}
+
+.atGlanceMarquee {
+    padding: 60px 30px 0;
+    overflow: hidden;
+}
+
+.atGlanceMarquee .marqueeText {
+    font-family: var(--marquee-black);
+    font-size: 80px;
+    color: #a8a8a8;
+    text-transform: uppercase;
+}
+
+.atGlanceGrid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 50px;
+    padding-top: 20px;
+}
+
+.atGlanceGridItem {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+}
+
+.atGlanceGridItem>img {
+    object-fit: cover;
+}
+
+.atGlanceGridItem>.horizontalLIne {
+    transition: background 0.3s ease;
+    position: relative;
+}
+
+.specialityCard:hover {
+    background: rgba(0, 0, 0, 0.75);
+}
+
+.specialityImageWrap {
+    flex: 0 0 150px;
+    border-radius: 10px;
+    overflow: hidden;
+}
+
+.specialityImage {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+    border-radius: 10px;
+}
+
+.specialityContent {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    padding: 30px 60px 30px 0;
+    justify-content: center;
+}
+
+.specialityContent h4 {
+    font-size: 26px;
+    color: #fff;
+    margin: 0;
+}
+
+.specialityContent p {
+    font-size: 18px;
+    line-height: 1.5em;
+    color: #fff;
+    margin: 8px 30px 0 0;
+    opacity: 0;
+    transform: translateY(10px);
+    pointer-events: none;
+    transition: opacity 0.4s ease, transform 0.4s ease;
+    position: absolute;
+    top: 35%;
+}
+
+.specialityCard:hover .specialityContent p {
+    opacity: 1;
+    transform: translateY(0);
+    pointer-events: auto;
+}
+
+.ourSpecialitiesBody {
+    position: relative;
+}
+
+.ourSpecialitiesSliderNav {
+    z-index: 10;
+    gap: 15px;
+    display: flex;
+    position: absolute;
+    top: -100px;
+    right: 0;
+}
+
+.ourSpecialitiesSliderBtn {
+    width: 45px;
+    height: 45px;
+    background-image: url("/images/home/left-arrow.svg");
+    background-size: contain;
+    background-repeat: no-repeat;
+    cursor: pointer;
+}
+
+.ourSpecialitiesSliderBtn.ourSpecialitiesNextBtn {
+    rotate: 180deg;
+}
+
+.ourSpecialitiesMarquee {
+    padding: 60px 30px 0;
+    overflow: hidden;
+}
+
+.ourSpecialitiesMarquee .marqueeText {
+    font-family: var(--marquee-black);
+    font-size: 80px;
+    color: #a8a8a8;
+    text-transform: uppercase;
+}
+
+
+/*at glance*/
+.atGlanceWrap {
+    padding: 100px 0 180px;
+    background: #ececec;
+    position: relative;
+    border-radius: var(--border-home);
+    margin-top: -100px;
+    z-index: 1;
+}
+
+.atGlanceTopCont {
+    display: flex;
+    gap: 100px;
+}
+
+.atGlanceTopContLft>p {
+    font-size: 30px;
+    line-height: 1.5em;
+    margin-top: 50px;
+    color: #111111;
+    max-width: 820px;
+}
+
+.atGlanceTopContLft a {
+    color: var(--blue);
+    margin-top: 40px;
+    font-size: 18px;
+    line-height: 1em;
+    display: inline-block;
+    position: relative;
+    padding-right: 30px;
+    transition: color 0.3s ease;
+}
+
+.atGlanceTopContLft a:after {
+    content: "";
+    position: absolute;
+    right: 0;
+    top: 5px;
+    width: 20px;
+    height: 20px;
+    background-image: url("/images/icons/right-arrow-red.svg");
+    background-size: contain;
+    background-repeat: no-repeat;
+    cursor: pointer;
+    transition: transform 0.3s ease;
+}
+
+.atGlanceTopContLft a:hover:after {
+    transform: translateX(3px);
+}
+
+.atGlanceTopContRght {
+    position: relative;
+    flex: 1;
+}
+
+.atGlanceTopContRght>span {
+    font-size: 380px;
+    line-height: 1em;
+    font-family: var(--medium);
+    color: #e5e5e5;
+}
+
+.atGlanceTopContRght>em {
+    position: absolute;
+    bottom: 120px;
+    right: 0;
+    max-width: 60%;
+}
+
+.atGlanceMarquee {
+    padding: 60px 30px 0;
+    overflow: hidden;
+}
+
+.atGlanceMarquee .marqueeText {
+    font-family: var(--marquee-black);
+    font-size: 80px;
+    color: #a8a8a8;
+    text-transform: uppercase;
+}
+
+.atGlanceGrid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 50px;
+    padding-top: 20px;
+}
+
+.atGlanceGridItem {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+}
+
+.atGlanceGridItem>img {
+    object-fit: cover;
+}
+
+.atGlanceGridItem>.horizontalLIne {
     height: 1px;
     width: 100%;
     background: #707070;
@@ -1156,4 +1560,25 @@
     font-size: 22px;
     line-height: 1.5em;
     color: #333333;
+}
+
+/* Fix Swiper Initial Layout (FOUC) */
+.areaOfApplicationsSlider .swiper-slide {
+    width: 100%;
+    /* Mobile default */
+    margin-right: 45px;
+}
+
+@media (min-width: 768px) {
+    .areaOfApplicationsSlider .swiper-slide {
+        width: calc((100% - 45px) / 2);
+        margin-right: 45px;
+    }
+}
+
+@media (min-width: 1024px) {
+    .areaOfApplicationsSlider .swiper-slide {
+        width: calc((100% - 90px) / 3);
+        margin-right: 45px;
+    }
 }
