--- a/public/styles/staticstyle.css
+++ b/public/styles/staticstyle.css
@@ -1293,13 +1293,13 @@ h2.designCommonHead {
 
 /*about-us*/
 .aboutUsBannerWrap {
-    padding: 200px 0;
+    padding: 150px 0;
 }
 
 .aboutUsBannerContent {
     display: flex;
     justify-content: space-between;
-    gap: 80px;
+    gap: 120px;
 }
 
 .aboutUsBannerContentLft {
@@ -1475,13 +1475,13 @@ h2.designCommonHead {
 
 /*about-us*/
 .aboutUsBannerWrap {
-    padding: 200px 0;
+    padding: 150px 0;
 }
 
 .aboutUsBannerContent {
     display: flex;
     justify-content: space-between;
-    gap: 80px;
+    gap: 120px;
 }
 
 .aboutUsBannerContentLft {
@@ -1788,15 +1788,19 @@ h2.designCommonHead {
     line-height: 1em;
     border-bottom: 1px solid #707070;
     padding-bottom: 15px;
-    margin-bottom: 30px;
+    /* margin-bottom: 30px; */
     color: #BCBCBC;
+}
+
+.aboutUsMissionGridItem>img {
+    margin: 40px 0;
 }
 
 .aboutUsMissionGridItem>h3 {
     font-size: 48px;
     line-height: 1em;
     font-family: var(--medium);
-    margin: 30px 0;
+    margin: 0 0 25px;
 }
 
 .aboutUsMissionGridItem>p {
@@ -1808,7 +1812,22 @@ h2.designCommonHead {
 .aboutUsMissionGridItem>ul>li {
     font-size: 18px;
     line-height: 1.5em;
+    padding: 0 0 10px 20px;
+    position: relative;
 }
+
+.aboutUsMissionGridItem>ul>li::before {
+    content: "";
+    border-radius: 50%;
+    background: #ffff;
+    width: 6px;
+    height: 6px;
+    display: inline-block;
+    position: absolute;
+    top: 10px;
+    left: 0;
+}
+
 
 .aboutUsInfraStructureWrap {
     padding: 100px 0 200px;
@@ -1976,4 +1995,10 @@ h2.designCommonHead {
     font-family: var(--medium);
     text-align: center;
     margin: 25px 25px 0;
+}
+
+.aboutUsAwardsGridItem>em {
+    border-radius: 20px;
+    display: block;
+    overflow: hidden;
 }
