--- a/public/styles/staticstyle.css
+++ b/public/styles/staticstyle.css
@@ -1783,13 +1783,35 @@ h2.designCommonHead {
 }
 
 .aboutUsMissionGridItem>span {
+    position: relative;
     display: block;
     font-size: 18px;
     line-height: 1em;
-    border-bottom: 1px solid #707070;
     padding-bottom: 15px;
-    /* margin-bottom: 30px; */
     color: #BCBCBC;
+    overflow: hidden;
+}
+
+.aboutUsMissionGridItem>span::after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 1px;
+    background: linear-gradient(90deg, #707070 25%, #e0e0e0 50%, #707070 75%);
+    background-size: 200% 100%;
+    animation: borderRun 3s linear infinite;
+}
+
+@keyframes borderRun {
+    0% {
+        background-position: 100% 0;
+    }
+
+    100% {
+        background-position: -100% 0;
+    }
 }
 
 .aboutUsMissionGridItem>img {
@@ -1830,14 +1852,11 @@ h2.designCommonHead {
 
 
 .aboutUsInfraStructureWrap {
-    padding: 100px 0 200px;
+    padding: 100px 0 220px;
     background: #ECECEC;
-    position: sticky;
-    top: -300px;
+    position: relative;
     border-radius: var(--border-home);
-    /* margin-top: -100px; */
     z-index: 5;
-    /* height: 100vh; */
 }
 
 .aboutUsInfraStructureTopCont {
@@ -1906,7 +1925,7 @@ h2.designCommonHead {
     position: sticky;
     top: 80px;
     border-radius: var(--border-home);
-    /* margin-top: -100px; */
+    margin-top: -100px;
     z-index: 6;
     height: 100vh;
 }
